--- a/Avinash/sample/Dockerfile
+++ b/Avinash/sample/Dockerfile
@@ -4,8 +4,7 @@ MAINTAINER Avinash avi@gmail.com
 
 WORKDIR /app
 
-COPY  app.py /app
-      requirements.txt /app
+COPY  app.py requirements.txt /app
 
 RUN pip install -r requirements.txt
 
